--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,158 @@
-body {
-	margin: 0;
-	font-family: sans-serif;
-	background-color: #333;
-	/* background-image: url(../assets/images/sleep-cat.jpeg); */
+*,
+*::after,
+*::before{
+    box-sizing: border-box;
+}
+
+:root{
+    --color-incorrect: #757575;
+    --color-present: #e4a81d;
+    --color-correct: #43a047;
+}
+
+body{
+    background-color: #111;
+    color: #f0f8ff;
+    font-family: sans-serif;
+    font-size: 2rem;
+    margin: 0 auto;
+    max-width: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.main{
+    text-align: center;
+}
+
+h1{
+    font-size: 4rem;
+    margin: 1rem 0;
+}
+
+.game{
+    display: grid;
+    grid-gap: 0.5rem;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+
+.game__row{
+    display: flex;
+    gap: 0.5rem;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.letter{
+    width: 40px;
+    height: 40px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.letter-correct{
+    background-color: var(--color-correct);
+}
+
+.letter-incorrect{
+    background-color: var(--color-incorrect);
+}
+
+.letter-present{
+    background-color: var(--color-present);
+}
+
+.form{
+    margin-bottom: 1rem;
+}
+
+.input{
+    width: 62%;
+    background: none;
+    color: #ccc;
+    font-size: 1.5rem;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    outline: none;
+}
+
+.pop-up{
+    background-color: #eee;
+    color: #111;
+    width: 60%;
+    text-align: center;
+    font-size: 1rem;
+    position: fixed;
+    left: 50%;
+    top: 0;
+    margin-bottom: 2rem;
+    padding: 1rem;
+    transform: translate(-50%) translateY(-100%);
+    transition: transform .5s cubic-bezier(.42,0,.29,2.25);
+}
+
+.pop-up--show {
+    transform: translate(-50%) translateY(50vh)
+}
+
+.keyboard-container{
+    width: 100%;
+    margin-left: auto;
+    box-sizing: border-box;
+    margin-right: auto;
+    display: block;
+    padding: 5px 3px;
+}
+
+.keyboard{
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: repeat(10, minmax(0px, 1fr));
+    gap: 4px;
+	padding: 0 20px;
+}
+
+.keyboard__letter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+	font-size: 32px;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background-color: #ccc;
+    color: #111;
+}
+
+.keyboard__send{
+	grid-column-start: 9;
+    grid-column-end: span 2; 
+	width: 80px;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.keyboard__letter:hover{
+    background-color: #9ea2a8;
+}
+
+@media screen and (max-width:767px){
+	.keyboard__letter{
+		width: 25px;
+		height: 25px;
+		font-size: 15px;
+	}
+	.keyboard__send{
+		width: 50px;
+		font-size: 14px;
+	}
 }
